Fix the spacing of the assets.

--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -20,7 +20,6 @@
 .u-h\:65p { height: 65%; }
 .u-h\:80p { height: 80%; }
 .u-h\:90p { height: 90%; }
-.u-h\:95p { height: 95%; }
 .u-jc\:c { justify-content: center; }
 .u-l\:0 { left: 0; }
 .u-l\:50p { left: 50%; }
